--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GCEAD</title>
+    <title>Polo Av. Paulista</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -58,7 +58,7 @@
         <div class="row row-cols-3 g-0">
           <div class="col">
             <a href="polos.html">
-              <div class="cardsHome">
+              <div class="cardsHome light">
                 <div class="row row-cols-2">
                   <div class="col">
                     <br>
@@ -74,7 +74,7 @@
           </div>
           <div class="col">
             <a href="alunos.html">
-              <div class="cardsHome"  style="background-color: blueviolet">
+              <div class="cardsHome light" style="background-color: blueviolet">
                 <div class="row row-cols-2">
                   <div class="col">
                     <br>
@@ -90,7 +90,7 @@
           </div>
           <div class="col">
             <a href="funcionarios.html">
-              <div class="cardsHome" style="background-color: orange;">
+              <div class="cardsHome light" style="background-color: orange;">
                 <div class="row row-cols-2">
                   <div class="col">
                     <br>
