--- a/pages/polos.html
+++ b/pages/polos.html
@@ -45,12 +45,50 @@
 </header>
 
 <body class="light">
+
+  <!--modal de adição de polo-->
+  <div class="modal fade" id="addPolo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <div class="container" style="text-align:center">
+                <h5 class="modal-title" style="color: #0478D9;">Cadastrar um Novo Polo
+                </h5>
+            </div>
+        </div>
+        <div class="modal-body">
+            <form method="POST" action="../../crud/criarConta/controleConta.php" autocomplete="off"
+                enctype="multipart/form-data">
+                <div class="form-floating mb-3 mt-3">
+                    <input type="text" class="form-control inputGeral"
+                        placeholder="Digite o seu Usuario" required name="nome">
+                    <label class="labelCadastro">Digite o Nome do Polo</label>
+                </div>
+                <div class="mt-3 mb-3">
+                    <label for="arquivo" class="form-control" id="labelArquivo">Escolha
+                        uma Foto do Polo</label>
+                    <input type="file" class="form-control" name="foto" id="arquivo">
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
+                        style="font-size:16px"
+                        onclick="window.location.href='funcionarios.html'">Voltar</button>
+                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                        style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--modal de adição de polo-->
+
     <div id="divPolos">
       <div class="container text-center">
           <div class="row row-cols-3">
-            <div class="col" style="padding-left: 10px; padding-right: 10px;">
-              <div class="card">
-                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="..."></a>
+            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
+              <div class="card cardsPolo light">
+                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                     <h5 class="card-title">Polo Av. Paulista</h5>
                     <button class="btn btn-outline-danger">
@@ -61,9 +99,9 @@
                 </div>
               </div>
             </div>
-            <div class="col" style="padding-left: 10px; padding-right: 10px;">
-              <div class="card">
-                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpg" class="card-img-top" alt="..."></a>
+            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
+              <div class="card cardsPolo light">
+                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..." width="10px"></a>
                 <div class="card-body">
                     <h5 class="card-title">Polo Av. Paulista</h5>
                     <button class="btn btn-outline-danger">
@@ -74,12 +112,14 @@
                 </div>
               </div>
             </div>
-            <div class="col" style="padding-left: 10px; padding-right: 10px;">
-              <div class="card">
-                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="76%" fill="currentColor" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
+            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
+              <div class="card cardsPolo light">
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+                  data-bs-target="#addPolo"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="17.4rem" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
                   <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
                   <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
-                </svg></a>
+                  </svg>
+                </button>
                 <div class="card-body">
                     <h5 class="card-title">Adicionar Polo</h5>
                 </div>
