Reorganização nos arquivos das páginas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col">
                 <h1>Login</h1><br>
-                <form action="pages/polos.html" method="POST">
+                <form action="pages/polos/polos.html" method="POST">
                     <p><label for="usuario">Usuário:</label><br>
                     <input class="inputLogin" type="text" name="usuario" id="usuario" required autocomplete="off"></p>
                         
@@ -24,7 +24,7 @@
                         
                     <p><button type="submit" class="btn btn-outline-primary mb-3">Entrar</button></p>
                 </form>
-                <a href="pages/esqueciSenha.html">Esqueci minha senha</a>
+                <a href="pages/esqueciSenha/esqueciSenha.html">Esqueci minha senha</a>
             </div>
             <div class="col">
                 <div>
