--- a/pages/esqueciSenha/esqueciSenha.html
+++ b/pages/esqueciSenha/esqueciSenha.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recuperação de Senha</title>
-    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="imgs/favicon.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="../../imgs/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
