--- a/pages/funcionarios/funcionarios.html
+++ b/pages/funcionarios/funcionarios.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funcionários Av. Paulista</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="shortcut icon" href="../../imgs/favicon.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,31 +17,31 @@
 <header>
   <nav class="navbar navbar-expand-lg light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="home.html">Home</a>
+      <a class="navbar-brand" href="../home/home.html">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="polos.html">Polos</a>
+            <a class="nav-link" href="../polos/polos.html">Polos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="alunos.html">Alunos</a>
+            <a class="nav-link" href="../alunos/alunos.html">Alunos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="funcionarios.html">Funcionários</a>
+            <a class="nav-link" href="../funcionarios/funcionarios.html">Funcionários</a>
           </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="../imgs/conta/account.png" alt="perfil" width="30px">
+            <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
-            <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+            <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
                 <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -123,7 +123,7 @@
 
     <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
     data-bs-target="#addFuncionario" style="font-size: 1.0em; width: 200px;">Adicionar Funcionário
-    <img src="../imgs/alunos/addAlunoIcon.png" alt="add aluno" width="50px">
+    <img src="../../imgs/alunos/addAlunoIcon.png" alt="add aluno" width="50px">
     </button>
 
     <form class="d-flex inputPesquisa" role="search">
@@ -178,8 +178,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 <footer class="light">
-  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
+  <img id="logoFooter" src="../../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
 
-<script src="../js/trocaTema.js"></script>
+<script src="../../js/trocaTema.js"></script>
 </html>
