--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo Av. Paulista</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="shortcut icon" href="../../imgs/favicon.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,24 +24,24 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="polos.html">Polos</a>
+            <a class="nav-link" href="../polos/polos.html">Polos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="alunos.html">Alunos</a>
+            <a class="nav-link" href="../alunos/alunos.html">Alunos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="funcionarios.html">Funcionários</a>
+            <a class="nav-link" href="../funcionarios/funcionarios.html">Funcionários</a>
           </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="../imgs/conta/account.png" alt="perfil" width="30px">
+            <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
-            <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+            <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li class="form-check form-switch" id="switchTema">
               <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             </li>
@@ -57,7 +57,7 @@
     <div class="container text-center">
         <div class="row row-cols-3 g-0">
           <div class="col">
-            <a href="polos.html">
+            <a href="../polos/polos.html">
               <div class="cardsHome light">
                 <div class="row row-cols-2">
                   <div class="col">
@@ -66,14 +66,14 @@
                     <p>Polos<br> cadastrados</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/polos.png" alt="polos" width="100%">
+                    <img src="../../imgs/home/polos.png" alt="polos" width="100%">
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col">
-            <a href="alunos.html">
+            <a href="../alunos/alunos.html">
               <div class="cardsHome light" style="background-color: blueviolet">
                 <div class="row row-cols-2">
                   <div class="col">
@@ -82,14 +82,14 @@
                     <p>Aluno<br> cadastrado</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/alunos.png" alt="aluno" width="100%">
+                    <img src="../../imgs/home/alunos.png" alt="aluno" width="100%">
                   </div>
                 </div>
               </div>
             </a>
           </div>
           <div class="col">
-            <a href="funcionarios.html">
+            <a href="../funcionarios/funcionarios.html">
               <div class="cardsHome light" style="background-color: orange;">
                 <div class="row row-cols-2">
                   <div class="col">
@@ -98,7 +98,7 @@
                     <p>Funcionário<br> cadastrado</p>
                   </div>
                   <div class="col">
-                    <img src="../imgs/home/funcionarios.png" alt="polos" width="100%">
+                    <img src="../../imgs/home/funcionarios.png" alt="polos" width="100%">
                   </div>
                 </div>
               </div>
@@ -112,7 +112,7 @@
 </body>
 
 <footer class="light">
-  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
+  <img id="logoFooter" src="../../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
-<script src="../js/trocaTema.js"></script>
+<script src="../../js/trocaTema.js"></script>
 </html>
