--- a/pages/polos/polos.html
+++ b/pages/polos/polos.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polos</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../imgs/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="shortcut icon" href="../../imgs/favicon.jpg" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,11 +27,11 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="../imgs/conta/account.png" alt="perfil" width="30px">
+            <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Ver perfil</a></li>
-            <li><a class="dropdown-item" href="../index.html">Sair</a></li>
+            <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
                 <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
@@ -85,10 +85,10 @@
 
     <div id="divPolos">
       <div class="container text-center">
-          <div class="row row-cols-3">
-            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
+          <div class="row row-cols-2">
+            <div class="col" style="padding-left: 10px; padding-right: 10px; width:30rem">
               <div class="card cardsPolo light">
-                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..."></a>
+                <a href="../home/home.html"><img src="../../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..."></a>
                 <div class="card-body">
                     <h5 class="card-title">Polo Av. Paulista</h5>
                     <button class="btn btn-outline-danger">
@@ -99,23 +99,10 @@
                 </div>
               </div>
             </div>
-            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
-              <div class="card cardsPolo light">
-                <a href="home.html"><img src="../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..." width="10px"></a>
-                <div class="card-body">
-                    <h5 class="card-title">Polo Av. Paulista</h5>
-                    <button class="btn btn-outline-danger">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-                      <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-                      </svg>
-                    </button>
-                </div>
-              </div>
-            </div>
-            <div class="col" style="padding-left: 10px; padding-right: 10px; height:30rem">
+            <div class="col" style="padding-left: 10px; padding-right: 10px; width:30rem">
               <div class="card cardsPolo light">
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                  data-bs-target="#addPolo"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="17.4rem" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
+                  data-bs-target="#addPolo"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="22.5rem" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
                   <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
                   <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
                   </svg>
@@ -134,8 +121,8 @@
   </body>
 
 <footer class="light">
-  <img id="logoFooter" src="../imgs/logo/debughop.png" alt="debughop" width=100rem">
+  <img id="logoFooter" src="../../imgs/logo/debughop.png" alt="debughop" width=100rem">
 </footer>
 
-<script src="../js/trocaTema.js"></script>
+<script src="../../js/trocaTema.js"></script>
 </html>
