--- a/pages/polos/polos.html
+++ b/pages/polos/polos.html
@@ -72,9 +72,10 @@
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
                         style="font-size:16px"
-                        onclick="window.location.href='funcionarios.html'">Voltar</button>
+                        onclick="window.location.href='polos.html'">Voltar</button>
                     <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
                         style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
+                </div>
             </form>
           </div>
         </div>
@@ -85,31 +86,27 @@
 
     <div id="divPolos">
       <div class="container text-center">
-          <div class="row row-cols-2">
-            <div class="col" style="padding-left: 10px; padding-right: 10px; width:30rem">
-              <div class="card cardsPolo light">
-                <a href="../home/home.html"><img src="../../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="..."></a>
-                <div class="card-body">
-                    <h5 class="card-title">Polo Av. Paulista</h5>
-                    <button class="btn btn-outline-danger">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-                      <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-                      </svg>
-                  </button>
-                </div>
+        <div class="row row-cols colunaPolos">
+          <div class="col">
+            <div class="card cardsPolo light">
+              <a href="../home/home.html"><img src="../../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="Católica Av. Paulista"></a>
+              <div class="card-body">
+                  <h5 class="card-title textoPolo">Polo Av. Paulista</h5>
+                  <button class="btn btn-outline-danger deletarPolo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                    </svg>
+                </button>
               </div>
             </div>
-            <div class="col" style="padding-left: 10px; padding-right: 10px; width:30rem">
-              <div class="card cardsPolo light">
-                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                  data-bs-target="#addPolo"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="22.5rem" class="bi bi-file-earmark-plus" viewBox="0 0 16 16">
-                  <path d="M8 6.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 .5-.5z"/>
-                  <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
-                  </svg>
-                </button>
-                <div class="card-body">
-                    <h5 class="card-title">Adicionar Polo</h5>
-                </div>
+          </div>
+          <div class="col">
+            <div class="card cardsPolo light">
+              <div class="btnAddPolo light" data-bs-toggle="modal"
+              data-bs-target="#addPolo">
+              </div>
+              <div class="card-body">
+                  <h5 class="card-title">Adicionar Polo</h5>
               </div>
             </div>
           </div>
