Tela de visualizar perfil adicionada

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -40,7 +40,7 @@
             <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+            <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li class="form-check form-switch" id="switchTema">
               <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
