--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -41,7 +41,7 @@
             <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+            <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
