--- a/pages/polos/polos.html
+++ b/pages/polos/polos.html
@@ -30,7 +30,7 @@
             <img src="../../imgs/conta/account.png" alt="perfil" width="30px">
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="#">Ver perfil</a></li>
+            <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
@@ -46,76 +46,77 @@
 
 <body class="light">
 
-  <!--modal de adição de polo-->
-  <div class="modal fade" id="addPolo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <div class="container" style="text-align:center">
-                <h5 class="modal-title" style="color: #0478D9;">Cadastrar um Novo Polo
-                </h5>
-            </div>
+<!--modal de adição de polo-->
+<div class="modal fade" id="addPolo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+          <div class="container" style="text-align:center">
+              <h5 class="modal-title" style="color: #0478D9;">Cadastrar um Novo Polo
+              </h5>
+          </div>
+      </div>
+      <div class="modal-body">
+          <form method="POST" action="../../crud/criarConta/controleConta.php" autocomplete="off"
+              enctype="multipart/form-data">
+              <div class="form-floating mb-3 mt-3">
+                  <input type="text" class="form-control inputGeral"
+                      placeholder="Digite o seu Usuario" required name="nome">
+                  <label class="labelCadastro">Digite o Nome do Polo</label>
+              </div>
+              <div class="mt-3 mb-3">
+                  <label for="arquivo" class="form-control" id="labelArquivo">Escolha
+                      uma Foto do Polo</label>
+                  <input type="file" class="form-control" name="foto" id="arquivo">
+              </div>
+              <div class="modal-footer">
+                  <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
+                      style="font-size:16px"
+                      onclick="window.location.href='polos.html'">Voltar</button>
+                  <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                      style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
+              </div>
+          </form>
         </div>
-        <div class="modal-body">
-            <form method="POST" action="../../crud/criarConta/controleConta.php" autocomplete="off"
-                enctype="multipart/form-data">
-                <div class="form-floating mb-3 mt-3">
-                    <input type="text" class="form-control inputGeral"
-                        placeholder="Digite o seu Usuario" required name="nome">
-                    <label class="labelCadastro">Digite o Nome do Polo</label>
-                </div>
-                <div class="mt-3 mb-3">
-                    <label for="arquivo" class="form-control" id="labelArquivo">Escolha
-                        uma Foto do Polo</label>
-                    <input type="file" class="form-control" name="foto" id="arquivo">
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
-                        style="font-size:16px"
-                        onclick="window.location.href='polos.html'">Voltar</button>
-                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
-                        style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
-                </div>
-            </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!--modal de adição de polo-->
+
+<div id="divPolos">
+  <div class="container text-center">
+    <div class="row row-cols colunaPolos">
+      <div class="col">
+        <div class="card cardsPolo light">
+          <a href="../home/home.html"><img src="../../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="Católica Av. Paulista"></a>
+          <div class="card-body">
+              <h5 class="card-title textoPolo">Polo Av. Paulista</h5>
+              <button class="btn btn-outline-danger deletarPolo">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card cardsPolo light">
+          <div class="btnAddPolo light" data-bs-toggle="modal"
+          data-bs-target="#addPolo">
+          </div>
+          <div class="card-body">
+              <h5 class="card-title">Adicionar Polo</h5>
           </div>
         </div>
       </div>
     </div>
   </div>
-<!--modal de adição de polo-->
+</div>
 
-    <div id="divPolos">
-      <div class="container text-center">
-        <div class="row row-cols colunaPolos">
-          <div class="col">
-            <div class="card cardsPolo light">
-              <a href="../home/home.html"><img src="../../imgs/polos/ceadPaulista.jpeg" class="card-img-top" alt="Católica Av. Paulista"></a>
-              <div class="card-body">
-                  <h5 class="card-title textoPolo">Polo Av. Paulista</h5>
-                  <button class="btn btn-outline-danger deletarPolo">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-                    </svg>
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card cardsPolo light">
-              <div class="btnAddPolo light" data-bs-toggle="modal"
-              data-bs-target="#addPolo">
-              </div>
-              <div class="card-body">
-                  <h5 class="card-title">Adicionar Polo</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-  </body>
+</body>
 
 <footer class="light">
   <img id="logoFooter" src="../../imgs/logo/debughop.png" alt="debughop" width=100rem">
