Tela de consulta específica de aluno adicionada

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -43,7 +43,7 @@
             <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li class="form-check form-switch" id="switchTema">
-              <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+              <input class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
             </li>
           </ul>
         </li>
