--- a/pages/polos/polos.html
+++ b/pages/polos/polos.html
@@ -34,7 +34,7 @@
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
-                <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <input class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
               </div>
             </li>
           </ul>
