--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -45,7 +45,7 @@
             <li><a class="dropdown-item" href="../index.html">Sair</a></li>
             <li>
               <div class="form-check form-switch" id="switchTema">
-                <input class="form-check-input trocaTema" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <input class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
               </div>
             </li>
           </ul>
@@ -200,7 +200,7 @@
                       <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
                     </svg>
                   </button>
-                  <button class='btn btn-sm btn-outline-primary editAluno' value="<?php echo $row['id_aluno']; ?>">
+                  <button onclick="location.href='consultaAluno.html'" class='btn btn-sm btn-outline-primary editAluno' value="<?php echo $row['id_aluno']; ?>">
                     <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-clipboard' viewBox='0 0 16 16'>
                       <path d='M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z' />
                       <path d='M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z' />
