--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="imgs/favicon.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="imgs/favicon.jpg" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+
+  <div class="modal fade" id="quemSomos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="container" style="text-align:center">
+            <h5 class="modal-title" style="color: #0478D9;">Quem somos</h5>
+          </div>
+        </div>
+        <div class="modal-body">
+          <h3>Sobre a Católica</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident quasi nobis error quod ratione possimus atque deserunt asperiores dolorum a fuga sequi officiis eveniet laboriosam ipsum quos mollitia, consequuntur quia?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <body style="background-color: whitesmoke;">
     <div class="container text-center divLogin">
         <img src="imgs/logo/gceadazullogoa.png" alt="gceadlogo" width="35%" style="margin: auto;transform: translateY(-150%);">
@@ -34,6 +51,7 @@
                 </div>
             </div>
         </div>
+        <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#quemSomos">Quem Somos</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
