Função de preencher tabelas para demonstração adicionada

--- a/pages/funcionarios/funcionarios.html
+++ b/pages/funcionarios/funcionarios.html
@@ -42,11 +42,9 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
-            <li>
-              <div class="form-check form-switch" id="switchTema">
-                <input class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-              </div>
-            </li>
+            <span class="dropdown-item">Modo escuro <li class="form-check form-switch" id="switchTema">
+              <input id="switchTema" class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            </li></span>
           </ul>
         </li>
       </div>
@@ -112,6 +110,7 @@
                         onclick="window.location.href='funcionarios.html'">Voltar</button>
                     <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
                         style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
+                    <button class="btn btn-outline-success" onclick="preencherTabela()">Novo funcionário</button>
             </form>
           </div>
         </div>
@@ -136,7 +135,7 @@
     <div class="overflow-auto">
       <div class="column">  
         <div class="m-2 ">
-          <table class="table light" style="color:#0478D9">
+          <table id="tabelaNomes" class="table light" style="color:#0478D9">
             <thead style="text-align: center;">
               <th scope="col" style='text-align:center'>Nome</th>
               <th scope="col" style='text-align:center'>Email</th>
@@ -151,7 +150,7 @@
                 <td><span>joorgee15@gmail.com</span></td>
                 <td><span>Administrador</span></td>
                 <td><span>14666385</span></td>
-                <td><span>013/09/1974</span></td>
+                <td><span>13/09/1974</span></td>
                 <td>
                   <button onclick="location.href='consultaFuncionario.html'" class='btn btn-sm btn-outline-primary editAluno' value="<?php echo $row['id_aluno']; ?>">
                     <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-clipboard' viewBox='0 0 16 16'>
@@ -168,6 +167,12 @@
                 </td>
               </tr>
             </tbody>
+            <script type="text/javascript">
+              let preencherTabela = () => {
+              let info = document.getElementById('tabelaNomes');
+              info.innerHTML += "<tbody style='text-align: center;'><tr><td><span>Cleber</span></td><td><span>cleberi345@gmail.com</span></td><td><span>Funcionário</span></td><td><span>098419</span></td><td><span>12/08/1987</span></td><td>                  <button onclick='location.href='consultaAluno.html'' class='btn btn-sm btn-outline-primary editAluno' value='<?php echo $row['id_aluno']; ?>                    <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-clipboard' viewBox='0 0 16 16'>                      <path d='M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z' />                      <path d='M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z' />                    </svg>                  </button>                  <button class='btn btn-sm btn-outline-danger deleteAluno' value='<?php echo $row['id_aluno']; ?>                    <svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-trash' viewBox='0 0 16 16'>                      <path d='M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z' />                      <path fill-rule='evenodd' d='M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z' />                    </svg>                  </button>                </td></tr></tbody>";
+              }
+            </script>
           </table>
         </div>
       </div>
