--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -42,9 +42,9 @@
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="../perfil/perfil.html">Ver perfil</a></li>
             <li><a class="dropdown-item" href="../../index.html">Sair</a></li>
-            <li class="form-check form-switch" id="switchTema">
-              <input class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-            </li>
+            <span class="dropdown-item">Modo escuro <li class="form-check form-switch" id="switchTema">
+              <input id="switchTema" class="form-check-input trocaTema light" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            </li></span>
           </ul>
         </li>
       </div>
