--- a/pages/alunos/consultaAluno.html
+++ b/pages/alunos/consultaAluno.html
@@ -54,9 +54,9 @@
     
     <div class="overflow-auto">
         <div class="column">  
-          <div class="m-2 ">
-            <table class="table light" style="color:#0478D9">
-              <thead style="text-align: center;">
+          <div class="m-2">
+            <table class="table light" style="color:#0478D9; width: 30rem;margin: auto;">
+              <thead style="text-align: center">
                 <th scope="col" style='text-align:center'>Nome</th>
                 <th scope="col" style='text-align:center'>CPF</th>
                 <th scope="col" style='text-align:center'>E-Mail</th>
