--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -135,7 +135,7 @@
         </div>
         <div class="col colunaPerfil">
           <div class="historicoPerfil">
-            <h1>Histórico</h1>
+            <h1>Seu histórico</h1>
             <div class="historicoFuncionario">
               <div class="container">
               
