--- a/pages/alunos/alunos.html
+++ b/pages/alunos/alunos.html
@@ -111,9 +111,8 @@
                     <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
                         style="font-size:16px"
                         onclick="window.location.href='alunos.html'">Voltar</button>
-                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
-                        style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>                  
-                    <button class="btn btn-outline-success"  onclick='preencherTabela()'>Novo aluno</button>
+                    <button onclick='preencherTabela()' type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                        style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button> 
             </form>
           </div>
         </div>
