--- a/pages/funcionarios/funcionarios.html
+++ b/pages/funcionarios/funcionarios.html
@@ -108,9 +108,8 @@
                     <button type="submit" class="btn btn-outline-danger btn-lg btn-block"
                         style="font-size:16px"
                         onclick="window.location.href='funcionarios.html'">Voltar</button>
-                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"
+                    <button onclick="preencherTabela()" type="submit" class="btn btn-outline-primary btn-lg btn-block"
                         style="font-size:16px" value="cadastrar" name="botao">Cadastrar</button>
-                    <button class="btn btn-outline-success" onclick="preencherTabela()">Novo funcionário</button>
             </form>
           </div>
         </div>
